--- a/PelengTestCalculator/PelengTestCalculator.csproj
+++ b/PelengTestCalculator/PelengTestCalculator.csproj
@@ -45,7 +45,7 @@
     <Compile Include="IOperation.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Operations.cs" />
+    <Compile Include="Operation.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
